# customer-churn-prediction

./: .gitignore  README.md  debug_features.py  packages.txt  pyproject.toml  requirements.txt  run.py  setup.sh
app/: app.py
data/raw/: customer_churn_dataset-training-master-selected-columns.csv
src/: data_preprocessing.py  feature_engineering.py  final_predictor.py  model_training.py  pipeline.py  predict_pipeline.py
