# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-prediction"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit==1.29.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "scikit-learn==1.4.0",
    "joblib==1.3.2",
    "xgboost==2.0.3",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
]